templates/open-pub_template.yaml
---
# Source: open-pub/templates/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openweb-pub-mysql
  labels:
    app.kubernetes.io/name: openweb-pub-mysql
    app.kubernetes.io/part-of: openweb-pub
    helm.sh/chart: open-pub-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: mysql
      port: 3306
  selector:
    app.kubernetes.io/name: openweb-pub-mysql
    app.kubernetes.io/instance: release-name
---
# Source: open-pub/templates/openweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openweb-pub
  labels:
    app.kubernetes.io/name: openweb-pub
    app.kubernetes.io/part-of: openweb-pub
    helm.sh/chart: open-pub-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 80
      protocol: TCP
      name: https
  selector:
    app.kubernetes.io/name: openweb-pub-wordpress
    app.kubernetes.io/instance: release-name
---
# Source: open-pub/templates/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openweb-pub-mysql
  namespace: default
  labels:
    app.kubernetes.io/name: openweb-pub-mysql
    app.kubernetes.io/part-of: openweb-pub
    helm.sh/chart: open-pub-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm

spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: openweb-pub-mysql
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openweb-pub-mysql
        app.kubernetes.io/part-of: openweb-pub
        helm.sh/chart: open-pub-0.1.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
    spec:
      nodeSelector:
                null
      containers:
        - name: openweb-pub-mysql
          image: mysql:5.7
          imagePullPolicy: 
          resources:
                      {}
          ports:
            - name: mysql
              containerPort: 3306

          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3

          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3

          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: openweb-pub-database
---
# Source: open-pub/templates/openweb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openweb-pub-wordpress
  labels:
    app.kubernetes.io/name: openweb-pub-wordpress
    app.kubernetes.io/part-of: openweb-pub
    helm.sh/chart: open-pub-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: openweb-pub-wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: openweb-pub-wordpress
        app.kubernetes.io/part-of: openweb-pub
        helm.sh/chart: open-pub-0.1.0
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/managed-by: Helm
    spec:
      volumes:
        - name: openweb-pub-data
          persistentVolumeClaim:
            claimName: openweb-pub-data

      containers:
        - name: openweb-pub-wordpress
          image: "docker.io/conduction/openwebconcept:4.8"
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: openweb-pub-data
              mountPath: /bitnami/wordpress
              subPath: wordpress
          resources:
              {}
---
# Source: open-pub/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  name: openweb-pub-prod-ingress
  labels:
    app.kubernetes.io/name: openweb-pub-ingress
    app.kubernetes.io/part-of: openweb-pub
    helm.sh/chart: open-pub-0.1.0
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
spec:
  rules:

    - host: zuid-drecht.nl
      http:
          paths:
            - path: /(.*)
            - backend:
                serviceName: openweb-pub
                servicePort: 80
    - host: www.zuid-drecht.nl
      http:
          paths:
            - path: /(.*)
            - backend:
                serviceName: openweb-pub
                servicePort: 80
